<resources>
    <string name="app_name">To-Do List</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string-array name="filter_options">
        <item>All</item>
        <item>Active</item>
        <item>Completed</item>
        <item>Archived</item>
    </string-array>
    <string-array name="priority_options">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="recurrence_options">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titre">Titre</string>
    <string name="supprimer">Supprimer</string>
    <string name="date">Date</string>
    <string name="description_task">Description</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="add_your_task">Add Your Task</string>
    <string name="select_date">Select Date</string>
    <string name="priority_low">Priority: Low</string>
    <string name="continue_f">continue</string>
</resources>